--- a/BH/BH.vcxproj.filters
+++ b/BH/BH.vcxproj.filters
@@ -3,7 +3,6 @@
   <ItemGroup>
     <ClCompile Include="AsyncDrawBuffer.cpp" />
     <ClCompile Include="BH.cpp" />
-    <ClCompile Include="BitReader.cpp" />
     <ClCompile Include="Common.cpp" />
     <ClCompile Include="Config.cpp" />
     <ClCompile Include="D2Handlers.cpp" />
@@ -97,11 +96,13 @@
     <ClCompile Include="Modules\GameSettings\GameSettings.cpp">
       <Filter>Modules\GameSettings</Filter>
     </ClCompile>
+    <ClCompile Include="Modules\Maphack\Maphack.cpp">
+      <Filter>Modules\Maphack</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AsyncDrawBuffer.h" />
     <ClInclude Include="BH.h" />
-    <ClInclude Include="BitReader.h" />
     <ClInclude Include="Common.h" />
     <ClInclude Include="CommonStructs.h" />
     <ClInclude Include="Config.h" />
@@ -203,6 +204,9 @@
     <ClInclude Include="Modules\GameSettings\GameSettings.h">
       <Filter>Modules\GameSettings</Filter>
     </ClInclude>
+    <ClInclude Include="Modules\Maphack\Maphack.h">
+      <Filter>Modules\Maphack</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Modules">
@@ -282,6 +286,9 @@
     </Filter>
     <Filter Include="Modules\GameSettings">
       <UniqueIdentifier>{804cabda-3e31-4dee-bcf5-07cd55094c08}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Modules\Maphack">
+      <UniqueIdentifier>{158642ee-6b3a-4081-9eae-1109f3fb990e}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
