--- a/BH/CMakeLists.txt
+++ b/BH/CMakeLists.txt
@@ -2,7 +2,6 @@ project(BH)
 
 set(SOURCE_FILES "AsyncDrawBuffer.cpp"
                  "BH.cpp"
-                 "BitReader.cpp"
                  "Common.cpp"
                  "Config.cpp"
                  "D2Handlers.cpp"
@@ -12,11 +11,8 @@ set(SOURCE_FILES "AsyncDrawBuffer.cpp"
                  "D2Version.cpp"
                  "DllMain.cpp"
                  "JSONObject.cpp"
-                 "MPQInit.cpp"
-                 "MPQReader.cpp"
                  "Mustache.cpp"
                  "Patch.cpp"
-                 "TableReader.cpp"
                  "Task.cpp")
 
 set(MODULE_SOURCES "Modules/Module.cpp"
@@ -28,6 +24,7 @@ set(MODULE_SOURCES "Modules/Module.cpp"
                    "Modules/Item/ItemDisplay.cpp"
                    "Modules/ItemMover/ItemMover.cpp"
                    "Modules/Party/Party.cpp"
+                   "Modules/FixChat/FixChat.cpp"
                    "Modules/ScreenInfo/ScreenInfo.cpp"
                    "Modules/StashExport/StashExport.cpp")
 
