--- a/BH/CMakeLists.txt
+++ b/BH/CMakeLists.txt
@@ -43,7 +43,10 @@ set(DRAWING_SOURCES "Drawing/Hook.cpp"
                     "Drawing/UI/UI.cpp"
                     "Drawing/UI/UITab.cpp")
 
-set(SOURCE_FILES ${SOURCE_FILES} ${MODULE_SOURCES} ${DRAWING_SOURCES})
+set(SOURCE_FILES ${SOURCE_FILES} ${MODULE_SOURCES} ${DRAWING_SOURCES}
+        Modules/GameSettings/GameSettings.cpp
+        BHTranslation.cpp
+        BHTranslation.h)
 add_library(BH ${SOURCE_FILES})
 target_include_directories(BH PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../ThirdParty/cpp-lru-cache/include)
 target_link_libraries(BH ${STORM_LIBRARY} Shlwapi)
